--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="A detailed list of the top ranked cryptocurrencies"
-        />
+        <meta name="description" content="A detailed list of the top ranked cryptocurrencies" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Top Crypto</title>
+        <title>Top Cryptocurrencies</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
